SynProdGITV1/force-app/main/default/objects/SYN_Analytics__mdt/SYN_Analytics__mdt.object-meta.xml
<CustomObject>
    <description>SYN Analytics parameters used in dashboard and reports</description>
    <label>SYN Analytics</label>
    <pluralLabel>SYN Analytics</pluralLabel>
</CustomObject>