SynProdGITV1/force-app/main/default/objects/SYN_Analytics__mdt/fields/Activity_Check_t__c.field-meta.xml
<CustomField>
    <fullName>Activity_Check_t__c</fullName>
    <description>Activity Check Threshold on Opportunity</description>
    <label>Activity Check Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>