SynProdGITV1/force-app/main/default/objects/SYN_Analytics__mdt/fields/Adoption_Stage__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Stage__c</fullName>
    <description>Adoption Stage Threshold on Opportunity Stage Risk</description>
    <label>Adoption Stage Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>