SynProdGITV1/force-app/main/default/objects/SYN_Analytics__mdt/fields/Chemistry_Stage_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Chemistry_Stage_Threshold__c</fullName>
    <description>Chemistry Stage Threshold on Opportunity Stage Risk</description>
    <label>Chemistry Stage Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>