SynProdGITV1/force-app/main/default/objects/SYN_Analytics__mdt/fields/Operations__c.field-meta.xml
<CustomField>
    <fullName>Operations__c</fullName>
    <description>Operations Stage Threshold on Opportunity Stage Risk</description>
    <label>Operations Stage Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>